force-app/main/default/objects/DeliveryOrder__c/DeliveryOrder__c.object-meta.xml
<CustomObject>
    <label>Delivery Order</label>
    <nameField>
        <displayFormat>DlvyOrder-{0}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>