force-app/main/default/objects/DeliveryOrder__c/fields/DeliveryOrderGroup__c.field-meta.xml
<CustomField>
    <fullName>DeliveryOrderGroup__c</fullName>
    <label>Delivery Order Group</label>
    <referenceTo>DeliveryOrderGroup__c</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>DeliveryOrders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>