force-app/main/default/objects/DeliveryOrder__c/fields/DeliveryRoute__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRoute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Route</label>
    <referenceTo>DeliveryRoute__c</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>DeliveryOrders</relationshipName>
    <type>Lookup</type>
</CustomField>