force-app/main/default/objects/DeliveryOrder__c/fields/Demand__c.field-meta.xml
<CustomField>
    <fullName>Demand__c</fullName>
    <label>Demand</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>