force-app/main/default/objects/DeliveryOrder__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Delivery Orders</relationshipLabel>
    <relationshipName>DeliveryOrders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>