force-app/main/default/objects/DeliveryOrder__c/fields/RouteDate__c.field-meta.xml
<CustomField>
    <fullName>RouteDate__c</fullName>
    <label>Route Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>