force-app/main/default/objects/DeliveryOrder__c/fields/ServiceTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceTime__c</fullName>
    <label>Service Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>