force-app/main/default/objects/DeliveryOrder__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>