force-app/main/default/objects/DeliveryOrder__c/fields/SkillSet__c.field-meta.xml
<CustomField>
    <fullName>SkillSet__c</fullName>
    <label>Skill Set</label>
    <length>30</length>
    <type>Text</type>
</CustomField>