force-app/main/default/objects/DeliveryOrder__c/fields/StreetSegmentID__c.field-meta.xml
<CustomField>
    <fullName>StreetSegmentID__c</fullName>
    <formula>Order__r.Account.StreetSegmentID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Segment ID</label>
    <type>Text</type>
</CustomField>