force-app/main/default/objects/DeliveryOrder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>RouteDate__c</columns>
    <columns>ServiceType__c</columns>
    <columns>SkillSet__c</columns>
    <columns>ServiceTime__c</columns>
    <columns>DeliveryRoute__c</columns>
    <columns>SequenceNumber__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order__c</field>
        <operation>equals</operation>
        <value>05770914</value>
    </filters>
    <label>All</label>
</ListView>